fixed layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -173,8 +173,12 @@ textarea{
   }
   body {
     @apply bg-background text-foreground;
+    overflow-x: hidden;
+    max-width: 100vw;
   }
   html {
     @apply font-sans;
+    overflow-x: hidden;
+    max-width: 100vw;
   }
 }
